--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,19 +18,22 @@ arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
 num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
+rayon = "1.7.0"
+
 
 [dev-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
 num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
+rayon = "1.7.0"
 
 [build-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
 num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
-
+rayon = "1.7.0"
 
 [lib]
 name = "RayBNN_Sparse"
