--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
-
+nohash-hasher = "0.2.0"
 
 [dev-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
@@ -27,6 +27,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
+nohash-hasher = "0.2.0"
 
 [build-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
@@ -34,6 +35,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
+nohash-hasher = "0.2.0"
 
 [lib]
 name = "RayBNN_Sparse"
