--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
+rand = "0.8.5"
 nohash-hasher = "0.2.0"
 
 [dev-dependencies]
@@ -27,6 +28,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
+rand = "0.8.5"
 nohash-hasher = "0.2.0"
 
 [build-dependencies]
@@ -35,6 +37,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
+rand = "0.8.5"
 nohash-hasher = "0.2.0"
 
 [lib]
