--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
 rand = "0.8.5"
 nohash-hasher = "0.2.0"
+RayBNN_DataLoader = "0.1.3"
+
 
 [dev-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
@@ -30,6 +32,8 @@ half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
 rand = "0.8.5"
 nohash-hasher = "0.2.0"
+RayBNN_DataLoader = "0.1.3"
+
 
 [build-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
@@ -39,6 +43,8 @@ half = { version = "2.3.1" , features = ["num-traits"] }
 rayon = "1.7.0"
 rand = "0.8.5"
 nohash-hasher = "0.2.0"
+RayBNN_DataLoader = "0.1.3"
+
 
 [lib]
 name = "RayBNN_Sparse"
